--- a/web/index.css
+++ b/web/index.css
@@ -2,11 +2,14 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+}
+
 h1 {
     color: black;
     font-size: 3em;
     font-family: 'Cinzel Decorative', cursive;
-    margin-top: 1em;
     margin-bottom: 0.2em;
 }
 
@@ -16,16 +19,9 @@ p {
     margin-top: 0;
 }
 
-#content {
-    width: 60vw;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border-left: #3b5bdb;
-}
-
 img {
+    width: 400px;
+    height: 112px;
     transform: translateX(-6%);
 }
 
@@ -37,3 +33,49 @@ a {
 a:hover {
     color:  #5c7cfa;
 }
+
+hr {
+    width: 65vw;
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
+@media (min-width: 450px){
+    #content {
+        width: 70vw;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+@media (max-width: 450px){
+    #content {
+        width: 80vw;
+        position: static;
+        margin: 0 auto;
+        margin-top: 100px;
+    }
+
+    h1 {
+      font-size: 2em;
+    }
+
+    br {
+        display: none;
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+    }
+
+    hr {
+        display: none;
+    }
+
+    p {
+        font-size: 1.5em;
+    }
+  }
